team overflow intial fix

--- a/src/styles/others.css
+++ b/src/styles/others.css
@@ -154,6 +154,7 @@
     align-items: flex-start;
     justify-content: flex-start;
     pointer-events: none;
+    overflow: initial;
 }
 
 .team-title{
